apps/registry/registry.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  ports:
    - port: 5000
      name: http
  selector:
    app: registry
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
spec:
  serviceName: "registry"
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
              name: registry
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
            - name: registry-auth
              mountPath: /auth
      volumes:
        - name: registry-auth
          secret:
            secretName: registry-auth
  volumeClaimTemplates:
    - metadata:
        name: registry-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
