apps/registry/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-registry
  namespace: registry
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "100000M"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - registry.kvlk.hu
      secretName: registry-letsencrypt
  rules:
    - host: "registry.kvlk.hu"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "registry"
                port:
                  name: http
