apps/registry/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  namespace: registry
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: registry
  hostnames:
    - "registry.kvlk.hu"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: registry
          port: 5000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
